--- a/webapp/.env
+++ b/webapp/.env
@@ -2,3 +2,4 @@ API_URL=http://localhost:5000
 APP_PORT=3000
 HASH_KEY=a32655830a29fddc78ad7c2c22740a61
 BLOCK_KEY=23ce9775869b3e6273ca6882bbd6fcc9
+#.env de exemplo, que usei para rodar a aplicação.
